--- a/appendix-08-terminology.html
+++ b/appendix-08-terminology.html
@@ -210,6 +210,7 @@
 <tr><td>dereference</td><td>取值</td><td>即 <code>*</code> 運算子</td></tr>
 <tr><td>dispatch</td><td>分派</td><td>參考：<a href="https://zh.wikipedia.org/wiki/%E5%A4%9A%E5%88%86%E6%B4%BE">維基百科</a></td></tr>
 <tr><td>diverging functions</td><td>發散函式</td><td>不回傳值的函式</td></tr>
+<tr><td>edition</td><td>版號</td><td></td></tr>
 <tr><td>enumerate</td><td>枚舉</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E6%9E%9A%E4%B8%BE">維基百科</a></td></tr>
 <tr><td>equality</td><td>等式</td><td></td></tr>
 <tr><td>executable</td><td>執行檔</td><td></td></tr>
